--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.26)
 
-# after all definitions, define project
 project(test CXX)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
 # lib
 add_library(test SHARED src/test.cpp)
